deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 4al1-groupe-10t
  name: eazyapp-deployment
  labels:
    app: eazyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eazyapp
  template:
    metadata:
      labels:
        app: eazyapp
    spec:
      containers:
        - name: eazyapp-container
          image: trofinnnn/eazybites-app:1.0

---

apiVersion: v1
kind: Service
metadata:
  namespace: 4al1-groupe-10t
  name: backend-service
spec:
  selector:
    app: eazyapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
